@@ -1,10 +1,16 @@
- * $Id: ChangeLog,v 1.4 2005-10-04 05:01:12 guerra000 Exp $
+ * $Id: ChangeLog,v 1.5 2005-10-08 02:20:08 declan2005 Exp $
 
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-07 18:00 UTC-0500 Ciro Vargas C. <sistemascvc@softhome.net>
+  * source/h_windows.prg
+  * source/c_windows.c
+    ! added new method print to form in oop sintax. (not semioop) 
+
 
 2005-10-04 00:00 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_grid.prg
